--- a/test.html
+++ b/test.html
@@ -115,7 +115,8 @@
                                         </textarea>
                                     </div>
                                 </div>
-                                <button class="btn btn-block btn-bold btn-primary">Sign Up</button>
+                                <button class="btn btn-block btn-bold btn-primary" type="button" @click="send">Sign
+                                    Up</button>
                             </div>
                         </form>
                     </div>
@@ -173,6 +174,22 @@
         methods: {
             inp(e) {
                 this.name = e.target.value;
+            },
+            send() {
+                HoldOn.open({
+                    theme: "sk-cube-grid",
+                    message: "處理中..."
+                });
+                //ajax
+                fetch("https://localhost:7217/api/add").then(res=> res.json())
+                .then(res=>{
+                    if(res.status==true)
+                    {
+                        alert("新增成功");
+                    }else{
+                        alert("新增失敗");
+                    }
+                }).finally(()=>HoldOn.close())
             }
         },
         mounted() {
