--- a/product.html
+++ b/product.html
@@ -77,7 +77,7 @@
                                     <div class="col">
                                         <div>
                                             <label for="inputName" class="form-label">名稱</label>
-                                            <input type="text" class="form-control" id="inputName">
+                                            <input type="text" class="form-control" id="inputName" v-model="search.name">
                                         </div>
                                     </div>
                                     <div class="col">
@@ -117,7 +117,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr v-for="(prod,idx) in products">
+                                <tr v-for="(prod,idx) in filterProducts">
                                     <th scope="row">{{++idx}}</th>
                                     <td><img class="w-100 h-100" :src="prod.imageUrl"></td>
                                     <td>{{prod.name}}</td>
@@ -146,6 +146,9 @@
     createApp({
         data() {
             return {
+                search:{
+                    name:""
+                },
                 products: [
                     { id: "1", name: "超級筆記本", description: "高效能的筆記本，適合所有種類的專業工作。", price: "999", imageUrl: "https://picsum.photos/id/684/35/35" },
                     { id: "2", name: "智慧手錶", description: "具備先進健康追蹤功能的智慧手錶。", price: "299", imageUrl: "https://picsum.photos/id/694/35/35" },
@@ -161,7 +164,10 @@
             }
         },
         computed: {
-
+            filterProducts(){
+                if(this.search.name) return this.products.filter(x=> x.name.includes(this.search.name));
+                return this.products;
+            }
         },
         watch: {
 
