--- a/product.html
+++ b/product.html
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 mt-3">
+                    <div class="col-12 mt-3" v-cloak>
                         <table class="table table-bordered table-striped">
                             <thead>
                                 <tr>
@@ -135,6 +135,7 @@
                                     <th scope="col">Price</th>
                                     <th scope="col">Description</th>
                                     <th scope="col">建立時間</th>
+                                    <!-- <th scope="col">操作</th> -->
                                 </tr>
                             </thead>
                             <tbody>
