--- a/test.html
+++ b/test.html
@@ -35,10 +35,15 @@
                         <form class="card">
                             <h5 class="card-title fw-400">Sign Up</h5>
                             <div class="card-body">
+                                <a href="https://www.google.com" @click.prevent="goback">hi~~~~</a>
+                                <div class="form-group">
+                                    <label>count</label>
+                                    <input class="form-control" type="text" v-model.number="form.count">
+                                </div>
                                 <div class="form-group">
                                     <label>Email</label>API發送次數:{{apiTime}}
                                     <input class="form-control" :class="validation.email" type="text"
-                                        v-model.lazy="form.email">
+                                        v-model.lazy.trim="form.email">
                                     <div class="valid-feedback">
                                         Looks good!
                                     </div>
@@ -48,7 +53,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>password</label>
-                                    <input class="form-control" :class="pwdIsvalid ? 'is-valid':'is-invalid'" type="password" v-model="form.password">
+                                    <input class="form-control" :class="pwdIsvalid ? 'is-valid':'is-invalid'" type="password" @keyup.enter="done" v-model="form.password">
                                     <div class="valid-feedback">
                                         密碼OK!
                                     </div>
@@ -145,8 +150,8 @@
     createApp({
         data() {
             return {
-                validation: {
-                    email: ""
+                validation:{
+                    email:true,
                 },
                 obj: {
                     a: 1,
@@ -155,6 +160,7 @@
                 },
                 arr: [1, 2, 3, 4],                
                 form: {
+                    count:0,
                     email: "",
                     password: "",
                     dateTime: "",
@@ -223,6 +229,14 @@
             }
         },
         methods: {
+            done(e){
+                console.log(e);
+            },
+            goback(e){
+                // e.preventDefault();
+                
+                console.log("Hi~~~~")
+            },
             inp(e) {
                 this.name = e.target.value;
             },
